--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,12 +26,19 @@
                 <button> edit </button>
             </form>
             &nbsp;
-            <form action="/chat/<%= chat._id %>/delete?_method=delete" method="post">
+            <form action="/chat/<%= chat._id %>/delete?_method=delete" method="post" onsubmit="return confirmDelete()">
                 <button> delete </button>
             </form>
             
         </div>
         <br><br>
    <% } %> 
+   <script>
+    function confirmDelete() {
+        return confirm("Are you sure you want to delete this message?");
+        // If user clicks "OK", form submits (returns true)
+        // If user clicks "Cancel", form does not submit (returns false)
+    }
+</script>
 </body>
 </html>
